<resources>
    <string name="app_name">TallerMovilesAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="perfil">Perfil</string>
    <string name="autoevaluacion">Autoevaluacion</string>
    <string name="reportes">Reportes</string>
    <string name="clave">Clave</string>
    <string name="usuario">Usuario</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="descripcion">Al llenar este formulario usted va a conocer la probabilidad de tener o no covid 19</string>
    <string name="p1">¿Ha salido de su casa en los últimos 14 dias?</string>
    <string name="p2">¿Ha tenido contacto con una persona que haya tenido síntomas gripales y que haya venido del extranjero?</string>
    <string name="nombre">Nombre</string>
    <string name="enviar">enviar</string>
    <string name="apellido">Apellido</string>
    <string name="edad">Edad</string>
    <string name="documento">N° Documento</string>
    <string name="descripcion2">Por favor llene los campos con la informción de la última persona que ha tenido contacto</string>
    <string name="p1entrada">Nombre del barrio o ciudad</string>
    <string name="p1radio">Si o No</string>
    <string name="p2Radio">Si o No</string>

    <string name="itemnombre">Nombre</string>
    <string name="itemapellido">Apellido</string>
    <string name="itemedad">Edad</string>
    <string name="itemfecha">Fecha</string>

</resources>
